--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Nika's Wonderland</h1>
-							<p class="major">Welcome again, lapochka! Now with Christmas theme for you, sexikus gorgeousikus 😍</p>
+							<p class="major">Welcome to 2026, another year for me to update this site and show my love 🥰 </p>
 							<ul class="actions stacked">
 								<li><a href="#Gallery" class="button large wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image-container">
-							<img src="images/Us26.jpg" alt="The Queen of my Heart 👑" />
+							<img src="images/Us30.jpg" alt="The Queen of my Heart 👑" />
 							<div id="banner-caption" class="caption">
-								<h3>The teenage couple 🥰 </h3>
+								<h3>The teenage couple 🥰 And just a dog 🐕 </h3>
 							</div>
 						</div>
 					</section>
@@ -93,6 +93,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/Us23.jpg" class="image">
+										<img src="images/Her36.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Buuuuuuurn the patriarchy</h3>
+										<p>While also being the beautifulest </p>
+									</div>
+								</article>
+								<article>
 									<a href="images/Us3.jpg" class="image">
 										<img src="images/Us3.jpg" alt="" />
 									</a>
@@ -116,6 +125,15 @@
 									<div class="caption">
 										<h3>Miss Earth 2025</h3>
 										<p>The sexiest, beautifulest, gorgeousest! 😍</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/Us23.jpg" class="image">
+										<img src="images/Her37.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Happy lapochka</h3>
+										<p>I'm sure that with you, Dobby doesn't want to be a free elf 🤣 </p>
 									</div>
 								</article>
 								<article>
@@ -143,6 +161,15 @@
 									<div class="caption">
 										<h3>Hotter than the Sun!</h3>
 										<p>OH WOW!! 😍😍😍 Is it hot in here? Ah, no it's just you 😘😍 </p>
+									</div>
+								</article>
+								<article>
+									<a href="images/Us23.jpg" class="image">
+										<img src="images/Her38.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>The purple queen</h3>
+										<p>In her gorgeous purple bunda 😍</p>
 									</div>
 								</article>
 								<article>
@@ -209,6 +236,15 @@
 									</div>
 								</article>
 								<article>
+									<a href="images/Us23.jpg" class="image">
+										<img src="images/Us28.jpg" alt="" />
+									</a>
+									<div class="caption">
+										<h3>At the ballet</h3>
+										<p>[Chuckles in rich]</p>
+									</div>
+								</article>
+								<article>
 									<a href="images/Us6.jpg" class="image">
 										<img src="images/Us6.jpg" alt="" />
 									</a>
@@ -253,6 +289,7 @@
 										<p>Those eyes! That hair! That smile! Those glasses! I'm in love 😍🥰</p>
 									</div>
 								</article>
+								
 								<article>
 									<a href="images/Her13.jpg" class="image">
 										<img src="images/Her13.jpg" alt="" />
@@ -704,7 +741,7 @@
   <div class="year-group">
     <button class="year-btn" onclick="toggleMonths('months-2026')">2026 ▼</button>
     <div id="months-2026" class="month-buttons">
-      <button onclick="showPoem('poem-january-2026')">Under construction :P</button>
+      <button onclick="showPoem('poem-january-2026')">January</button>
 
       <!-- Add more months here -->
     </div>
@@ -977,6 +1014,27 @@
 		<p class="poem-author">"Atlas" - By U.A. Fanthorpe </p>
 		<img src="images/Poem10.jpg" class="poem-image">
 	  </div>
+
+	   <div class="poem-card" id="poem-january-2026">
+		<h3>January 2026</h3>
+		<p class="poem-content">
+		Masons, when they start upon a building,<br>
+		Are careful to test out the scaffolding;<br>
+		<br>
+		Make sure that planks won’t slip at busy points,<br>
+		Secure all ladders, tighten bolted joints.<br>
+		<br>
+		And yet all this comes down when the job’s done<br>
+		Showing off walls of sure and solid stone.<br>
+        <br>
+		So if, my dear, there sometimes seem to be<br>
+		Old bridges breaking between you and me<br>
+		<br>	
+		Never fear. We may let the scaffolds fall<br>
+		Confident that we have built our wall.<br>
+		<p class="poem-author">"Scaffolding" - By Seamus Heaney </p>
+		<img src="images/Poem11.jpg" class="poem-image">
+	  </div>
   
 
   </section>
@@ -1072,8 +1130,8 @@
 										<div class="popup-content">
 											<span class="close-btn" onclick="closePopup()">&times;</span>
 											<h2>Lapochka 💜</h2>
-											<p>Thank you for your support, I couldn't continue without you. I'm grateful and happy to have you in my life, and I hope to have you forever. I love you very very much 💜💜💜</p>
-     										 <img src="images/Us27.jpg" class="popup-image">
+											<p>Happy to be able to share with you another year, hopefully of many. You are the bestest, and I wouldn't give you up for anything in this world. I love you very very much 💜💜💜</p>
+     										 <img src="images/Us28.jpg" class="popup-image">
 										</div>
 									</div>
 											<hr />
@@ -1304,7 +1362,7 @@ setInterval(createSnowflake, 300);
 		function createGift() {
   const gift = document.createElement("div");
   gift.classList.add("gift");
-  gift.textContent = ["🎁", "🎄"][Math.floor(Math.random()*3)];
+  gift.textContent = ["🖤", "💜"][Math.floor(Math.random()*3)];
 
   const size = Math.random() * 25 + 20;
   gift.style.fontSize = size + "px";
